--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "firebase": "^6.5.0",
+    "formik": "^1.5.8",
     "node-sass": "^4.12.0",
-    "react": "^16.9.0",
+    "react": "^16.6.3",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-redux-firebase": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "styled-components": "^4.3.2"
+    "redux": "^4.0.4",
+    "redux-firebase": "^0.3.3",
+    "redux-firestore": "^0.8.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.3.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,6 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001/",
   "eslintConfig": {
     "extends": "react-app"
   },
