--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "cryptocurrency-icons": "^0.16.1",
     "firebase": "^6.5.0",
     "formik": "^1.5.8",
     "node-sass": "^4.12.0",
