--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.8.6",
     "axios": "^0.19.0",
     "cryptocurrency-icons": "^0.16.1",
     "firebase": "^6.5.0",
     "formik": "^1.5.8",
     "node-sass": "^4.12.0",
     "react": "^16.6.3",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-redux-firebase": "^2.4.0",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.1"
   }
 }
