--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.2",
     "apexcharts": "^3.8.6",
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "cryptocurrency-icons": "^0.16.1",
     "firebase": "^6.5.0",
     "formik": "^1.5.8",
@@ -12,6 +14,7 @@
     "react": "^16.6.3",
     "react-apexcharts": "^1.3.3",
     "react-dom": "^16.9.0",
+    "react-notifications-component": "^2.1.0",
     "react-redux": "^7.1.1",
     "react-redux-firebase": "^2.4.0",
     "react-router-dom": "^5.0.1",
