--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.6.3",
     "react-apexcharts": "^1.3.3",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-notifications-component": "^2.1.0",
     "react-redux": "^7.1.1",
