--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "cryptocurrency-icons": "^0.16.1",
+    "date-and-time": "^0.10.0",
     "firebase": "^6.5.0",
     "formik": "^1.5.8",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.6.3",
     "react-apexcharts": "^1.3.3",
     "react-chartjs-2": "^2.8.0",
