--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^2.8.0",
     "cryptocurrency-icons": "^0.16.1",
     "date-and-time": "^0.10.0",
+    "date-fns": "^2.5.1",
     "firebase": "^6.5.0",
     "formik": "^1.5.8",
     "node-sass": "^4.12.0",
@@ -16,6 +17,7 @@
     "react": "^16.6.3",
     "react-apexcharts": "^1.3.3",
     "react-chartjs-2": "^2.8.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.9.0",
     "react-notifications-component": "^2.1.0",
     "react-redux": "^7.1.1",
