added favicon and made the flxw logo transparent

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,6 @@
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
-  for = "/*"
+  for = "/prices"
     [headers.values]
     Access-Control-Allow-Origin = "*"
