--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux-firebase": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-tooltip": "^3.11.1",
     "redux": "^4.0.4",
     "redux-firebase": "^0.3.3",
     "redux-firestore": "^0.8.0",
