--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.6.0",
     "firebase": "^6.5.0",
     "formik": "^1.5.8",
+    "framer-motion": "^1.6.15",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.6.3",
