--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^6.5.0",
     "formik": "^1.5.8",
     "framer-motion": "^1.6.15",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.6.3",
@@ -63,6 +64,9 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.4"
   }
 }
