--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^2.8.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.9.0",
+    "react-loading-skeleton": "^1.3.0",
     "react-notifications-component": "^2.1.0",
     "react-redux": "^7.1.1",
     "react-redux-firebase": "^2.4.0",
